# wayboard

./: ARCHITECTURE.md  BUILDING_A_COMPOSITOR.md  Cargo.toml
files/: config.toml
guide/: 01-skeleton.md  02-protocols.md  BUILDING_A_COMPOSITOR.md
shells/shell-default/: Cargo.toml
shells/shell-default/src/: lib.rs
wayboard-core/: Cargo.toml
wayboard-core/src/: input.rs  lib.rs  shell.rs  state.rs
wayboard-core/src/grabs/: mod.rs  move_grab.rs  resize_grab.rs
wayboard-core/src/handlers/: compositor.rs  mod.rs  xdg_shell.rs
wayboard-frontend/: Cargo.toml
wayboard-frontend/src/: config.rs  main.rs  winit.rs
