[package]
name = "wayboard-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
bitflags = "2.2.1"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
branch = "master"
default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
]
