[package]
name = "wayboard-frontend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wayboard"
path = "src/main.rs"

[dependencies]
wayboard-core = { path = "../wayboard-core" }
shell-default = { path = "../shells/shell-default" }
smithay = { git = "https://github.com/Smithay/smithay.git", branch = "master", default-features = false, features = ["backend_winit", "wayland_frontend", "desktop"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
