[package]
name = "wayboard-frontend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wayboard"
path = "src/main.rs"

[dependencies]
wayboard-core = { path = "../wayboard-core" }
shell-default = { path = "../shells/shell-default" }
smithay = { git = "https://github.com/Smithay/smithay.git", branch = "master", default-features = false, features = ["wayland_frontend"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
